--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
 alembic==0.8.10
 appdirs==1.4.0
+APScheduler==3.6.0
 asn1crypto==0.24.0
-bleach==2.1.2
+bleach==3.1.0
 blinker==1.3
 certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
 click==6.7
 colorama==0.3.9
-cryptography==2.1.4
+coloredlogs==10.0
+cryptography==2.7
 cycler==0.10.0
 decorator==4.2.1
 entrypoints==0.2.3
 eventlet==0.22.1
 Faker==0.7.7
-Flask==0.12.2
+Flask==1.0.3
 Flask-Assets==0.12
 Flask-Compress==1.4.0
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.3
+Flask-PyMongo==2.3.0
 Flask-RQ==0.2
 Flask-Script==2.0.5
 Flask-SocketIO==2.9.6
@@ -30,6 +33,7 @@ greenlet==0.4.13
 gunicorn==19.7.1
 honcho==0.7.1
 html5lib==1.0.1
+humanfriendly==4.18
 idna==2.6
 inflection==0.3.1
 ipykernel==4.8.1
@@ -38,7 +42,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.1.2
 itsdangerous==0.24
 jedi==0.11.1
-Jinja2==2.10
+Jinja2==2.10.1
 jsmin==2.2.1
 jsonpickle==0.9.2
 jsonschema==2.6.0
@@ -46,6 +50,7 @@ jupyter==1.0.0
 jupyter-client==5.2.2
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+libsass==0.19.1
 Mako==1.0.6
 MarkupSafe==1.0
 matplotlib==2.1.2
@@ -57,7 +62,7 @@ nbformat==4.4.0
 ndg-httpsclient==0.4.4
 nltk==3.4
 nose==1.3.7
-notebook==5.4.0
+notebook==5.7.8
 numpy==1.14.0
 packaging==16.8
 pandas==0.22.0
@@ -68,15 +73,20 @@ pickleshare==0.7.4
 pipenv==10.1.0
 praw==5.3.0
 prawcore==0.13.0
+prometheus-client==0.6.0
 prompt-toolkit==1.0.15
 psutil==5.3.1
 psycopg2==2.7
+pur==5.2.2
 pyasn1==0.4.2
 pycparser==2.18
 Pygments==2.2.0
+pymongo==3.8.0
 pyOpenSSL==17.5.0
 pyparsing==2.1.10
+pyreadline==2.1
 python-dateutil==2.6.0
+python-dotenv==0.10.2
 python-editor==1.0.3
 python-engineio==2.0.4
 python-socketio==1.9.0
@@ -87,7 +97,7 @@ qtconsole==4.3.1
 Quandl==3.3.0
 raygun4py==3.1.4
 redis==2.10.5
-requests==2.21.0
+requests==2.9.1
 rq==0.7.1
 scikit-learn==0.19.1
 scipy==1.0.0
@@ -96,15 +106,16 @@ simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.11.0
 sklearn==0.0
-SQLAlchemy==1.2.3
+SQLAlchemy==1.3.4
 sympy==1.1.1
 terminado==0.8.1
 testpath==0.3.1
 textblob==0.15.0
 tornado==4.5.3
 traitlets==4.3.2
+tzlocal==1.5.1
 update-checker==0.16
-urllib3==1.22
+urllib3==1.25.3
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
 wcwidth==0.1.7
