--- a/requirements.txt
+++ b/requirements.txt
@@ -97,7 +97,7 @@ qtconsole==4.3.1
 Quandl==3.3.0
 raygun4py==3.1.4
 redis==2.10.5
-requests==2.9.1
+requests>=2.20.0
 rq==0.7.1
 scikit-learn==0.19.1
 scipy==1.0.0
